
= AsciiDoc Report Plugin

== 1.12.0

* JDOT was replaced by Smetana for rendering the PlantUML diagram when no local GraphViz installation is used.

== 1.11.0

* Added support for rendering AsciiDoc files as reports which are provided by plugins and contain rules.
* Deprecated the report property `asciidoc.report.rule.directory`, it will be removed in future versions.

== 1.9.0

* The PlantUML diagram plugin now automatically selects GraphViz (prefered) or JDOT for rendering if not explicitly configured

== 1.8.0

* Include AsciiDoc Report plugin into jQAssistant main project. Note that for upgrading to 1.8 any existing dependency to the AsciiDoc Report plugin from the contrib area must be removed
* Renamed properties `asciidoc.report.plantuml.format` & `asciidoc.report.plantuml.rendermode` to `plantuml.report.format` & `plantuml.report.rendermode`
