@@ -12,7 +12,6 @@ import com.buschmais.jqassistant.core.report.api.model.Result;
 import com.buschmais.jqassistant.core.rule.api.model.ExecutableRule;
 
 import lombok.extern.slf4j.Slf4j;
-import net.sourceforge.plantuml.FileFormat;
 
 @Slf4j
 public abstract class AbstractPlantUMLReportPlugin implements ReportPlugin {
@@ -20,34 +19,31 @@ public abstract class AbstractPlantUMLReportPlugin implements ReportPlugin {
     private static final String PROPERTY_FILE_FORMAT = "plantuml.report.format";
     private static final String PROPERTY_RENDER_MODE = "plantuml.report.rendermode";
 
-    private static final String DEFAULT_FILE_FORMAT = FileFormat.SVG.name();
-
-    private final ImageRenderer imageRenderer = new ImageRenderer();
-
     private ReportContext reportContext;
 
     private File directory;
 
     private String fileFormat;
 
-    private RenderMode renderMode;
+    private String renderMode;
 
     @Override
     public void initialize() {
     }
 
     @Override
-    public void configure(ReportContext reportContext, Map<String, Object> properties) throws ReportException {
+    public void configure(ReportContext reportContext, Map<String, Object> properties) {
         this.reportContext = reportContext;
         directory = reportContext.getReportDirectory("plantuml");
-        fileFormat = (String) properties.getOrDefault(PROPERTY_FILE_FORMAT, DEFAULT_FILE_FORMAT);
-        String renderModeValue = (String) properties.getOrDefault(PROPERTY_RENDER_MODE, null);
-        this.renderMode = RenderMode.getRenderMode(renderModeValue);
+        // avoiding PlantUML types (e.g. net.sourceforge.plantuml.FileFormat) here to avoid warnings on startup if e.g. dot.exe is not present
+        this.fileFormat = (String) properties.getOrDefault(PROPERTY_FILE_FORMAT, "svg");
+        this.renderMode = (String) properties.get(PROPERTY_RENDER_MODE);
     }
 
     @Override
     public void setResult(Result<? extends ExecutableRule> result) throws ReportException {
-        String diagram = getRenderer(renderMode).renderDiagram(result);
+        String diagram = getRenderer(RenderMode.getRenderMode(renderMode)).renderDiagram(result);
+        ImageRenderer imageRenderer = new ImageRenderer();
         File file = imageRenderer.renderDiagram(diagram, result.getRule(), directory, fileFormat);
         URL url;
         try {
