@@ -4,6 +4,7 @@
 == 1.12.0
 
 * JDOT was replaced by Smetana for rendering the PlantUML diagram when no local GraphViz installation is used.
+* Delayed initialization of PlantUML to avoid unnecessary messages if GraphViz is not installed
 
 == 1.11.0
 
